# ch9121_configurator

./: .gitignore  Pipfile  README.md  ch9121.py  ch9121_conf_template.txt  ch9121_conf_to_set.txt  changelog.md  configure_ch9121_gui.py  devbox.json  example.yaml  gui_requirements.txt  pyproject.toml  test_frame_formulation.py
.github/workflows/: deploy.yml
device/: communication_frame.py  device.py  net.py  protocol.py  store_config.py
